@@ -1,6 +1,5 @@
 package com.goodee.beedan.service.order;
 
-import com.goodee.beedan.common.constant.MemberAuthority;
 import com.goodee.beedan.common.constant.OrderStatus;
 import com.goodee.beedan.common.constant.ShipmentStatus;
 import com.goodee.beedan.config.security.MemberUserDetails;
@@ -21,11 +20,8 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
 import java.util.*;
-import java.util.concurrent.ThreadLocalRandom;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 @Service
 @RequiredArgsConstructor
@@ -34,10 +30,8 @@ import java.util.stream.IntStream;
 public class OrderService {
     private final OrderRepository orderRepository;
     private final MemberRepository memberRepository;
-
     private final QuoteDetailRepository quoteDetailRepository;
     private final NegotiationRepository negotiationRepository;
-
     private final ShipmentRepository shipmentRepository;
     private final ShipmentItemRepository shipmentItemRepository;
     private final OrderItemRepository orderItemRepository;
@@ -48,39 +42,29 @@ public class OrderService {
     private final ThumbnailRedisService thumbnailRedisService;
 
     public Page<OrderDto> getOrderList(Long memId, Pageable pageable){
-        if(!memberRepository.existsById(memId)) return null;
-
+        memberRepository.getByIdOrThrow(memId);
         Page<Order> orderList = orderRepository.findByMember_MemIdOrderByOrdBaseCreDtDesc(memId, pageable);
-
         return orderList.map(this::mapToOrderDto);
     }
 
     @Transactional(readOnly = true)
-    public OrderDto getOrderDetail(Long ordId, MemberUserDetails userDetails) {
-        Order order = orderRepository.findByIdWithShipments(ordId).orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다."));
+    public OrderDto getOrderDetail(Long ordId, Long memId) {
+        Order order = orderRepository.getByIdOrThrow(ordId);
+        Member requester = memberRepository.getByIdOrThrow(memId);
 
-        boolean isAdmin = userDetails.getAuthorities().stream().anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
-        boolean isOwner = order.getMember().getMemId().equals(userDetails.getMemberId());
+        if (!requester.isAdmin()) order.validateOwner(memId);
 
-        if (!isAdmin && !isOwner) throw new IllegalArgumentException("해당 주문에 대한 조회 권한이 없습니다.");
-        
         return mapToOrderDto(order);
     }
 
     @Transactional
     public void updateOrder(Long ordId, Long memId, OrderDto dto) {
-        Order order = orderRepository.findById(ordId)
-                .orElseThrow(() -> new IllegalArgumentException("Order not found"));
-
-        if (!order.getMember().getMemId().equals(memId)) {
-            throw new IllegalArgumentException("본인의 주문만 수정할 수 있습니다.");
-        }
-
-        if (order.getOrdBaseStt() != OrderStatus.PREPARING) {
-            throw new IllegalStateException("배송 준비 중일 때만 정보를 수정할 수 있습니다.");
-        }
-
         if (dto == null) return;
+
+        Order order = orderRepository.getByIdOrThrow(ordId);
+        order.validateOwner(memId);
+
+        if (order.getOrdBaseStt() != OrderStatus.PREPARING) throw new IllegalStateException("배송 준비 중일 때만 정보를 수정할 수 있습니다.");
 
         if (dto.getOrdBaseAdr() != null) order.setOrdBaseAdr(dto.getOrdBaseAdr());
         if (dto.getOrdBaseAdrDt() != null) order.setOrdBaseAdrDt(dto.getOrdBaseAdrDt());
@@ -90,24 +74,20 @@ public class OrderService {
 
     @Transactional
     public void updateOrderStatus(Long ordId, OrderStatus newStatus) {
-        Order order = orderRepository.findById(ordId)
-                .orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다. ID: " + ordId));
+        Order order = orderRepository.getByIdOrThrow(ordId);
 
         if (order.getOrdBaseStt() == newStatus) return; // 같은 상태 선택시 상태 변경 방지
 
-        if (order.getOrdBaseStt() == OrderStatus.CANCELED) {
-            throw new IllegalStateException("취소된 주문의 상태는 변경할 수 없습니다.");
-        }
+        if (order.getOrdBaseStt() == OrderStatus.CANCELED) throw new IllegalStateException("취소된 주문의 상태는 변경할 수 없습니다.");
 
         order.setOrdBaseStt(newStatus);
     }
 
     @Transactional
     public void updateOrderIfAllShipmentsComplete(Long ordId) {
-        Order order = orderRepository.findById(ordId).orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다."));
+        Order order = orderRepository.getByIdOrThrow(ordId);
 
-        // 1. 해당 주문에 속한 모든 배송지 조회
-        List<Shipment> shipments = shipmentRepository.findByOrder(order);
+        List<Shipment> shipments = shipmentRepository.findByOrder(order); // 1. 해당 주문에 속한 모든 배송지 조회
 
         // 2. 모든 배송지가 '배송완료' 상태인지 확인
         boolean allComplete = shipments.stream().allMatch(s -> s.getShStt() == ShipmentStatus.DELIVERED);
@@ -120,22 +100,19 @@ public class OrderService {
 
     @Transactional
     public void cancelOrder(Long ordId, Long memId) {
-        if(!memberRepository.existsById(memId)) throw new IllegalArgumentException("회원이 존재하지 않습니다.");
-
-        Order order = orderRepository.findById(ordId).orElseThrow(() -> new IllegalArgumentException("주문을 찾을 수 없습니다."));
+        memberRepository.getByIdOrThrow(memId);
+        Order order = orderRepository.getByIdOrThrow(ordId);
 
         if (order.getOrdBaseStt() == OrderStatus.DELIVERING || order.getOrdBaseStt() == OrderStatus.DELIVERED) {
             throw new IllegalStateException("이미 배송이 시작되어 취소할 수 없습니다.");
         }
+
         order.setOrdBaseStt(OrderStatus.CANCELED);
         order.getShipments().forEach(sh -> sh.setShCanYn(true));
     }
 
     @Transactional
     public void createOrderFromWebhook(WebhookShipmentRequest webhookRequest) {
-        // quId (QouteBase) 사용 Payment 총 결제금액 확인
-        // quId 사용 QuoteDetail에서 주문한 상품 목록 및 배송지 정보 (수령인, 주소)
-        // memId가 들어가 있는 곳은 negotiation
         QuoteBase quoteBase = quoteBaseRepository.findById(webhookRequest.getQuId()).orElseThrow(() -> new IllegalStateException("견적 정보가 없습니다."));
         Negotiation negotiation = negotiationRepository.findByNgId(quoteBase.getNgId());
         Member member = memberRepository.findById(negotiation.getMemId()).orElseThrow(()-> new UsernameNotFoundException("일치하는 회원이 없습니다."));
@@ -144,7 +121,7 @@ public class OrderService {
 
         if (quoteDetails.isEmpty()) throw new IllegalStateException("견적 상세 상품이 없습니다.");
 
-        QuoteDetail firstItem = quoteDetails.get(0);
+        QuoteDetail firstItem = quoteDetails.getFirst();
         Order order = Order.builder()
                 .member(member)
                 .ordBaseStt(OrderStatus.PREPARING)
@@ -160,7 +137,7 @@ public class OrderService {
         // Shipment 및 관련 아이템 생성
         for (Map.Entry<String, List<QuoteDetail>> entry : groupedByAddress.entrySet()) {
             List<QuoteDetail> groupItems = entry.getValue();
-            QuoteDetail addressInfo = groupItems.get(0); // 그룹의 대표 배송지 정보
+            QuoteDetail addressInfo = groupItems.getFirst();
 
             // 목적지별 Shipment 생성
             Shipment shipment = Shipment.builder()
@@ -177,7 +154,7 @@ public class OrderService {
 
             // 주문 상품, 배송 물품
             for (QuoteDetail detail : groupItems) {
-                Stock stock = stockRepository.findById(detail.getStId()).orElseThrow(()->new IllegalArgumentException("상품 정보가 없습니다."));
+                Stock stock = stockRepository.getByIdOrThrow(detail.getStId());
                 String thumbKey = "display:thumbnail:" + UUID.randomUUID().toString();
 
                 OrderItem orderItem = OrderItem.builder()
@@ -191,7 +168,6 @@ public class OrderService {
 
                 thumbnailRedisService.generateAndCache(thumbKey, stock.getStImgUrl());
 
-                // ShipmentItem 생성 (Shipment와 OrderItem 연결)
                 ShipmentItem shipmentItem = ShipmentItem.builder()
                         .shipment(shipment)
                         .orderItem(orderItem)
@@ -211,17 +187,15 @@ public class OrderService {
 
         List<OrderItem> orderItems = order.getOrderItems();
 
-        // 주문 상품이 여러개 있는 경우 (대표명, 대표 썸네일, 개별 DTO 변환을 한 번에 처리)
         if (orderItems != null && !orderItems.isEmpty()) {
             int totalItems = orderItems.size();
-            OrderItem firstItem = orderItems.get(0);
+            OrderItem firstItem = orderItems.getFirst();
             String firstItemName = firstItem.getOrdItmNm();
 
             summaryName = (totalItems > 1) ? firstItemName + " 외 " + (totalItems - 1) + "건" : firstItemName;
 
-            if (firstItem.getOrdItmThumbKey() != null) {
-                repThumbUrl = "/api/images/thumb/" + firstItem.getOrdItmThumbKey();
-            }
+            if (firstItem.getOrdItmThumbKey() != null) repThumbUrl = "/api/images/thumb/" + firstItem.getOrdItmThumbKey();
+
 
             orderItemDtos = orderItems.stream()
                     .map(item -> OrderDto.OrderItemResponseDto.builder()
@@ -230,7 +204,7 @@ public class OrderService {
                             .ordItmThumbKey(item.getOrdItmThumbKey())
                             .ordItmThumbUrl(item.getOrdItmThumbKey() != null ? "/api/images/thumb/" + item.getOrdItmThumbKey() : null)
                             .build())
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         OrderDto orderDto = OrderDto.builder()
@@ -283,13 +257,12 @@ public class OrderService {
 
     @Transactional(readOnly = true)
     public Page<OrderDto> getListByAdmin(Long adminMemId, Pageable pageable) {
-        Member member = memberRepository.findById(adminMemId).orElseThrow(()->new UsernameNotFoundException("User not found"));
-        if(!member.getMemAut().equals(MemberAuthority.ADMIN)) throw new IllegalArgumentException("관리자만 주문 목록을 조회할 수 있습니다.");
+        Member member = memberRepository.getByIdOrThrow(adminMemId);
+        member.validateAdmin();
 
         Page<Order> orderPage = orderRepository.findAll(pageable);
 
         return orderPage.map(this::mapToOrderDto);
     }
-
 
 }
